--- a/C/retrospect/20180813.md
+++ b/C/retrospect/20180813.md
@@ -43,43 +43,59 @@
 
 ### 1-2. 진행 회고
 
+지은 : 저녁에 그룹콜 했던 것은 좋았다. 시간과 장소 구애받지 않고 회의를 할 수 있어서 좋았다. 이번 시점에서 새로운 가설을 세워야하는 시점이다. 지난 주 동안에 얻었던 인사이트를 얘기해보면 도움이 될 것 같다. 인사이트. 시각화에 시간을 너무 많이 들어서 시각화 해보는 게 목표였는데,데이터 간단하게 보는 것처럼 앞으로는 데이터를 먼저 봐야겠다는 생각이 들었다. 
 
-Q. 구체적인 과정이 없어서 진행이 어떠했는지?
+"통행량부터 찍어보는 게 좋겠다."
 
-Q. 진행 방식은 괜찮은가?
+ 통행량부터 찍어보고 서울은 많은데, DT점은 스톡플로에는 영향을 많이 안받는다는 생각이 들었다. 
 
+"범위를 정하는 게 좋겠다. "
 
-* 그룹콜을 이용한 회의는 좋음
+가빈 : 구간을 볼 수 있다고 했는데, 나눠져있는 것을 볼 수 없는가? 애자일하게 했었는데, 막상 해보니 너무 빨리끝났다. "차라리 데이터셋을 세개로 잡고 각각 분석해보는 게 좋겠다." 전체를 평균화해서 스피드 데이터를 보다보니 한사람이 네개 중에서 "좀 더 세부적으로 보는 게 좋겠다."다른 결과가 도출 될 것 같다는 생각이 들었다. 
 
-* 새로운 가설을 세워야 하는 시점. 인사이트를 나눠보자.
+세영 : 데이터를 도로에 찍어보는 데 많은 사람이 투자했다. 각각의 데이터를 애자일하게 돌려보는 게 좋겠다. 통행량과 속도가 연관이 있을 것 같다는 생각이 들었다. "시간대별 속도가 통계적으로 유의미하게 나왔다."좀 더 자세히 봐야할 것 같다. 좀 더 세부적으로 들어가야 한다.  
 
-* 시각화, API에 지나치게 시간을 많이 들인 것 같다. 데이터를 먼저 다 같이 describe를 통해서 보고 논의를 해보면 좋겠다.
+세영 - 지은 : T-TEST 결과 설명. 
 
-* 통행량을 빨리 찍어보면 좋을 것 같다. 
+세영 - 소현 : 속도상의 차이가 있을 것이라고 본 것이었기 때문에 가설이 다르다고 볼 수 없다. 
 
-* DT점은 스톡, 플로가 일반적인 상권에 비해 크게 영향을 주지 못하는 곳 같다.
+소현 : pandas랑 씨름 하는 상태다. 지금부터 무엇을 볼 것이라고 진행상황을 공유하는 것이 좋았다. 더 강화하면 좋겠다. 교통량 속도는 주변 상권 업종분석을 하는 게 좋겠다. 크롤링코드를 만들어보겠다. 
 
-* 통행량이랑 속도를 같이 보는 것이 중요할 것 가탇. 
+예인  : 도로가 입지저략을 세울 때는 도로를 세부적으로 선택할 것이다. 전국 맥날 크롤링해주신 것 보면서 느낀게 지방에는 거의 다 dt 였다. 초기 맥날은 식당형식이었는데, 후기 맥날은 dt점이 많다. 후기에는 임대료가 올라서 dt가 많이 생겼을 것이다. 임대료에 대한 데이터를 보고 싶다."" 임대료를 보는 게 좋겠다. ""
 
-* 서울 외 영역을 확장해서 보면 좋을지 고민된다. 
+예인 - 세영 :  건물 통째로 dt가 더 많다. 땅값이 더 좋겠다. 
 
-* 하나의 데이터를 팀원 전체가 나눠서 분담하기보단 다른 종류의 데이터를 2명씩 묶어서 바라보는 건 어떨까?
+예인 - 가빈 : 최근에 기사를 보니 신촌역 앞에 맥날이 폐업했다. 버거킹은 dt를 확대하면서 일반점 축소를 안한다. 일반점 data를 보자. "" dt 어디에 있을지 연관관계를 보고 싶다. " 
 
-* 조금 어려움이 있으면 좀 더 간단한 것으로 넘어가는 것이 좋을 것 같다. 
+예인 - 세영 ; 폐업일, 매출액 
 
-* 통행량과 속도를 보기 위해 세부적인 것을 볼 필요가 있다고 생각한다. 
+문희 : 생각보다 골목상권에 dt가 많았다. 전국 범위로 분석을 확대하는 것이 필요하다는 생각이 들었다. 경기도로 확대해보면 어떨까? 상권분석할 때 매장위주 맥날과 함께 보는 게 좋겠다. 
 
-* 원래는 DT점이 통행 속도가 더 느릴 것이라 생각했으나 그 반대가 나옴. 
+문희 - 세영 : 서울 DT 는 예외 데이터가 아닐까? 
 
-* 서울보다는 지방 쪽에 DT가 더 비율적으로 많음.
+## 2nd Iteration 회의
 
-* 상가값, 땅값도 중요한 요인으로 작용할 것. 
+### 2-1. 아이디어 회의 
 
+교통(속도, 통행량) : 세영, 예인.
 
+주변상권(주변업종, 인구데이터 ,  프랜차이즈 분석 ) : 소현  , 문희
 
-1. 2nd Iteration 회의
-   1. 목표 / 도출할 결과
-   2. 할 일 
-   3. 진행 과정 
+임대료(폐업일  ) 가빈 
 
+폐업일 데이터 : 지은, DT점만 년단위로 
+
+범주는 서울을 트레인 셋으로하고 부산을 하기에는 서울과 비슷한 전략을 쓸 수 있어야하는데, 같은 지역에 시간별로 해보면 어떨까?     
+
+네이버에 맥DT를 치면 블로그 리뷰가 뜬다. 여기에 날짜가 뜬다. 최고로 오래된 블로그 리뷰를 삼아서 데이터를 만들어보자. 
+
+신뢰성을 높일 수 있는 방안을 생각해보는 게 좋겠다. 
+
+### 2-2. 진행 과정 
+
+* 8월 15일까지 각자 맡은 부분에 해당하는 데이터를 모으고 탐구한다. 
+
+* 각자 진행하는 업무는 주기적으로 칸반의 In Progress를 통해 공유한다. 
+
+* 8월 15일에 함께 그룹콜로 논의 예정. 
 
