수요미식회 가장 수혜를 많이 받은 식당

--- a/A/180827_graphs.ipynb
+++ b/A/180827_graphs.ipynb
@@ -946,13 +946,236 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 가장 수혜를 많이 받은 식당 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suyo_best = suyo_area.groupby('식당')['식당', '방송전', '방송후'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suyo_best['증가분'] = suyo_best['방송후'] - suyo_best['방송전']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>방송전</th>\n",
+       "      <th>방송후</th>\n",
+       "      <th>증가분</th>\n",
+       "      <th>증가율</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>식당</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>다운타우너</th>\n",
+       "      <td>311</td>\n",
+       "      <td>558</td>\n",
+       "      <td>247</td>\n",
+       "      <td>79.421222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>덕자네 방앗간</th>\n",
+       "      <td>11</td>\n",
+       "      <td>185</td>\n",
+       "      <td>174</td>\n",
+       "      <td>1581.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>농민백암순대</th>\n",
+       "      <td>51</td>\n",
+       "      <td>170</td>\n",
+       "      <td>119</td>\n",
+       "      <td>233.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         방송전  방송후  증가분          증가율\n",
+       "식당                                 \n",
+       "다운타우너    311  558  247    79.421222\n",
+       "덕자네 방앗간   11  185  174  1581.818182\n",
+       "농민백암순대    51  170  119   233.333333"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suyo_best['증가율'] = 100 * suyo_best['증가분'] / suyo_best['방송전']\n",
+    "suyo_best.sort_values(by='증가분', ascending=False).head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>방송전</th>\n",
+       "      <th>방송후</th>\n",
+       "      <th>증가분</th>\n",
+       "      <th>증가율</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>식당</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>와글와글족</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>영주묵호문어집</th>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>참식당</th>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         방송전  방송후  증가분          증가율\n",
+       "식당                                 \n",
+       "와글와글족      0    2    2          inf\n",
+       "영주묵호문어집    0   31   31          inf\n",
+       "참식당        2   42   40  2000.000000"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suyo_best.sort_values(by='증가율', ascending=False).head(3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_all = pd.DataFrame()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
